Changelog
=========

4.17-dev - (unreleased)
-----------------------
 * Bug fix: added the IEEAPloneSite interface that should be provided by the EEA Plone Site
   The intention is to make it possible to create other plone sites in Data.fs that don't
   run code specific to EEA (for example some event subscribers)
 * Feature: GIS Application can now have ArcGIS or EyeOnEarth embedded map.
   [demarant #4959]
 * Bug fix: check if img_size is tuple since getSize could return an int value of the
   image size for non Image or IExternalHighlight content [ichimdav #4816]
 * Change: better name for the image ratio check handler, since it is generic. 
   [demarant #4816]
 * Change: Added minsize validator on preview image for gis map application
   [demarant #4959]
 * Change: for GIS Application use same url field for both the flash object and the url 
   to an external site like Eyeonearth. adjusted labels and descriptions  [demarant #4959]
 * Change: added display_on_datacentre for IExternalHighlight [ichimdav #4936]
 * Feature: all GIS Application objects will provide by now 
   Products.EEAContentTypes.content.interfaces.IInteractiveMap interface
   [ghicaale #4467]
 * Upgrade step: go to plone root /aq_parent/@@manage_interfaces and make the Plone site
   implement IEEAPloneSite 
 * Upgrade step: go to /portal_setup > import steps and reimport EEAContentTypes
   Action Providers steps which adds the crop action for Image and IExternalHighlights 
   [ichimdav #4816]
 * Upgrade step: remove duplicate Products.EEAContentTypes.content.interfaces.IInteractiveMap
   interface and reindex all GIS Application objects. Ask ghicaale to do it.
   [ghicaale #4467]

4.16 - (2012-02-15)
-------------------
 * Feature: Added possibility to disable the application form for vacancy.
   Very rare use case: vacancy application for Director must be send 
   to EU Commission. So property in ZMI is enough. [demarant]
 * Bug fix: fixed an error in flasfileStyle script when it got invalid